# trebuchet

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
assets/: trebuchet.conf
assets/themes/: catppuccin-latte.conf  catppuccin-mocha.conf  default.conf  dracula.conf  everforest-dark.conf  gruvbox-dark.conf  nord.conf  one-dark.conf  rose-pine.conf  solarized-dark.conf  tokyo-night.conf
scripts/: fetch-icons.sh  install.sh
src/: ai_agent.rs  app.rs  app_launcher.rs  command.rs  component.rs  config.rs  launcher.rs  main.rs  theme.rs
src/components/: ai_agent.rs  ai_client.rs  app_launcher.rs  cmd.rs  command.rs  command_result.rs  component.rs  mod.rs  settings.rs
src/modes/: ai.rs  mod.rs  search.rs
src/ui/: ai_response.rs  grid.rs  mod.rs  panel.rs  search.rs
