[package]
name = "trebuchet"
version = "0.3.1"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
iced = { version = "0.14", features = ["image", "svg", "tokio", "markdown"] }
iced_layershell = "0.15"
freedesktop-desktop-entry = "0.8"
xdg = "3.0"
fuzzy-matcher = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }
rust-embed = "8"
reqwest   = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
